--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,16 @@
 <resources>
 
     <!-- app and search bar -->
-    <string name="app_name">Photo Search</string>
+    <string name="app_name">Image Search</string>
     <string name="search_hint">Search Images</string>
+
+   <!-- Layout hard code string constant-->
+    <string name="search_history">Search History</string>
 
     <!-- Error names for Volley -->
     <string name="connection_error">Please check your connection!</string>
     <string name="no_images">Search for images to display</string>
+    <string name="no_internet">No internet connected</string>
     <string name="server_error">The server could not be found, try again after some time!</string>
     <string name="parse_error">Parsing error, try again after some time!</string>
     <string name="timeout_error">Connection TimeOut, please check your internet connection!</string>
